--- a/css/ryu-acupuncture.css
+++ b/css/ryu-acupuncture.css
@@ -1888,7 +1888,12 @@
     display: none;
   }
   .dermatological_block {
-    display: none;
+    position: absolute;
+    z-index: -1;
+    display: block;
+    width: 100%;
+    height: 250px;
+    opacity: 0.25;
   }
   .muscoskeletal_block {
     position: absolute;
@@ -1903,19 +1908,44 @@
     height: auto;
   }
   .urological_block {
-    display: none;
+    position: absolute;
+    z-index: -1;
+    display: block;
+    width: 100%;
+    height: 250px;
+    opacity: 0.25;
   }
   .gastrointestinal_block {
-    display: none;
+    position: absolute;
+    z-index: -1;
+    display: block;
+    width: 100%;
+    height: 250px;
+    opacity: 0.25;
   }
   .addiction_block {
-    display: none;
+    position: absolute;
+    z-index: -1;
+    display: block;
+    width: 100%;
+    height: 250px;
+    opacity: 0.25;
   }
   .respitory_block {
-    display: none;
+    position: absolute;
+    z-index: -1;
+    display: block;
+    width: 100%;
+    height: 250px;
+    opacity: 0.25;
   }
   .reproductive_block {
-    display: none;
+    position: absolute;
+    z-index: -1;
+    display: block;
+    width: 100%;
+    height: 250px;
+    opacity: 0.25;
   }
   .chronic_conditions_block {
     position: absolute;
@@ -1926,19 +1956,44 @@
     opacity: 0.25;
   }
   .ent_block {
-    display: none;
+    position: absolute;
+    z-index: -1;
+    display: block;
+    width: 100%;
+    height: 250px;
+    opacity: 0.25;
   }
   .psychological_block {
-    display: none;
+    position: absolute;
+    z-index: -1;
+    display: block;
+    width: 100%;
+    height: 250px;
+    opacity: 0.25;
   }
   .circulatory_block {
-    display: none;
+    position: absolute;
+    z-index: -1;
+    display: block;
+    width: 100%;
+    height: 250px;
+    opacity: 0.25;
   }
   .autoimmune_disorders_block {
-    display: none;
+    position: absolute;
+    z-index: -1;
+    display: block;
+    width: 100%;
+    height: 250px;
+    opacity: 0.25;
   }
   .immune_system_block {
-    display: none;
+    position: absolute;
+    z-index: -1;
+    display: block;
+    width: 100%;
+    height: 250px;
+    opacity: 0.25;
   }
   ._2_block_middle {
     -webkit-box-flex: 1;
