--- a/css/ryu-acupuncture.css
+++ b/css/ryu-acupuncture.css
@@ -417,7 +417,7 @@
   text-align: right;
 }
 
-.heading-12 {
+.hours_h3_left {
   text-align: right;
 }
 
@@ -1568,6 +1568,14 @@
   text-align: left;
 }
 
+.hours_h3_right {
+  text-align: right;
+}
+
+.image-2 {
+  text-align: center;
+}
+
 @media screen and (max-width: 991px) {
   .main_container {
     width: 90vw;
@@ -1681,11 +1689,19 @@
 }
 
 @media screen and (max-width: 479px) {
+  .about_section {
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
   .section_h2 {
     font-size: 30px;
     line-height: 30px;
   }
   ._2_block_row_ailment_right {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
     height: 250px;
   }
   ._2_block.margin_left {
@@ -1694,6 +1710,11 @@
   }
   ._2_block.margin_right {
     width: 100%;
+  }
+  .contact_section {
+    height: auto;
+    padding-top: 15px;
+    padding-bottom: 15px;
   }
   .ryu_title {
     font-size: 40px;
@@ -1752,6 +1773,8 @@
     justify-items: center;
   }
   .footer_link {
+    font-size: 14px;
+    line-height: 20px;
     text-align: center;
   }
   .footer_grid_1_block {
@@ -1764,6 +1787,33 @@
     font-size: 12px;
     line-height: 14px;
   }
+  .contact_page_section {
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+  .testimonial_page_section {
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+  .testimonials_section {
+    height: 4500px;
+  }
+  .grid-2 {
+    display: -ms-grid;
+    display: grid;
+    grid-auto-columns: 0.75fr;
+    grid-column-gap: 9px;
+    grid-row-gap: 0px;
+    -ms-grid-columns: 0.25fr 0.5fr;
+    grid-template-columns: 0.25fr 0.5fr;
+    -ms-grid-rows: 45px 45px 45px 45px 45px 45px 45px;
+    grid-template-rows: 45px 45px 45px 45px 45px 45px 45px;
+  }
+  .hours_h3_left {
+    font-size: 15px;
+    line-height: 15px;
+    text-align: left;
+  }
   ._65_block.margin_left {
     width: 100%;
     margin-left: 0px;
@@ -1771,6 +1821,9 @@
   ._35_block.margin_right {
     width: 100%;
     margin-right: 0px;
+  }
+  .horizontal_scroll_content {
+    width: 4500px;
   }
   .testimonial_card_1 {
     width: 270px;
@@ -1847,7 +1900,9 @@
     margin-left: 0px;
   }
   .testimonial_image {
-    margin-left: 117px;
+    width: 35px;
+    height: 35px;
+    margin-left: 235px;
   }
   .testimonial_location {
     margin-left: 103px;
@@ -1855,8 +1910,35 @@
   .testimonial_source {
     margin-left: 71px;
   }
+  .filter-controls {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-align-content: stretch;
+    -ms-flex-line-pack: stretch;
+    align-content: stretch;
+  }
+  .filter-button.ryu_testimonial_button {
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+  .conditions_treated_page {
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
   ._2_block_row_ailment_left {
     height: 250px;
+    margin-top: 0px;
+    margin-bottom: 0px;
   }
   .ailment_h3 {
     font-size: 20px;
@@ -2012,7 +2094,17 @@
     -ms-flex: 1;
     flex: 1;
   }
+  .services_intro_section {
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+  .our_team_section {
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
   .solo_para {
+    margin-top: 15px;
+    margin-bottom: 15px;
     text-align: center;
   }
   .list {
@@ -2036,6 +2128,14 @@
     background-size: cover;
     background-repeat: no-repeat;
     opacity: 1;
+  }
+  .nav-menu {
+    background-color: #fafafa;
+  }
+  .hours_h3_right {
+    font-size: 15px;
+    line-height: 15px;
+    text-align: right;
   }
 }
 
