--- a/css/ryu-acupuncture.css
+++ b/css/ryu-acupuncture.css
@@ -1581,6 +1581,41 @@
   height: 128px;
 }
 
+.services_picture_section_mobile {
+  display: none;
+}
+
+._2_block_row_services_mobile {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  height: 300px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  border-style: none none solid;
+  border-width: 1px;
+  border-color: #000 #000 #3898ec;
+}
+
+.ailment_h3_mobile {
+  font-family: Verdana, Geneva, sans-serif;
+  text-align: center;
+  text-shadow: 1px 1px 1px #3898ec;
+}
+
+.services_h3_mobile {
+  font-family: Verdana, Geneva, sans-serif;
+  text-align: center;
+  text-shadow: 1px 1px 1px #3898ec;
+}
+
 @media screen and (max-width: 991px) {
   .main_container {
     width: 90vw;
@@ -1956,11 +1991,15 @@
     opacity: 1;
   }
   ._2_block_row {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
     -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
+    -webkit-box-direction: reverse;
+    -webkit-flex-direction: column-reverse;
+    -ms-flex-direction: column-reverse;
+    flex-direction: column-reverse;
     -webkit-box-align: center;
     -webkit-align-items: center;
     -ms-flex-align: center;
@@ -2091,6 +2130,17 @@
     -ms-flex: 1;
     flex: 1;
   }
+  .photo._1 {
+    display: block;
+  }
+  .services_picture_section {
+    display: none;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
+  }
   .services_content_h3 {
     -webkit-transform: rotate(-90deg);
     -ms-transform: rotate(-90deg);
@@ -2144,6 +2194,165 @@
     font-size: 15px;
     line-height: 15px;
     text-align: right;
+  }
+  .services_picture_section_mobile {
+    display: block;
+    width: 100%;
+    margin-right: auto;
+    margin-left: auto;
+    padding-top: 15px;
+    padding-right: 0px;
+    padding-bottom: 15px;
+    text-align: left;
+  }
+  .services_mobile_picture_block {
+    position: absolute;
+    width: 100%;
+    height: 250px;
+  }
+  .services_mobile_info_block {
+    width: 90%;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .services_mobile_acupuncture_block {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    height: 250px;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    background-image: url('../images/acupuncture_treatment.jpg');
+    background-position: 50% 50%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    opacity: 0.25;
+  }
+  .services_mobile_h3 {
+    margin-top: 0px;
+    margin-bottom: 0px;
+    text-align: center;
+  }
+  ._2_block_row_services_mobile {
+    width: 100%;
+    height: 150px;
+    margin-top: 57px;
+    margin-bottom: 0px;
+  }
+  .services_mobile_picture_block_acupuncture {
+    position: absolute;
+    width: 100%;
+    height: 150px;
+    margin-top: 0px;
+    padding-right: 0px;
+    padding-bottom: 0px;
+    background-image: url('../images/acupuncture_treatment.jpg');
+    background-position: 50% 50%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    opacity: 0.25;
+  }
+  .services_mobile_header_block {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+  }
+  .ailment_h3_mobile {
+    font-size: 20px;
+    line-height: 20px;
+  }
+  .services_para_mobile {
+    margin-top: 10px;
+    text-align: left;
+  }
+  .services_h3_mobile {
+    margin-top: 0px;
+    margin-bottom: 0px;
+    font-size: 20px;
+    line-height: 20px;
+  }
+  .services_mobile_picture_block_herbs {
+    position: absolute;
+    width: 100%;
+    height: 150px;
+    margin-top: 0px;
+    padding-right: 0px;
+    padding-bottom: 0px;
+    background-image: url('../images/traditional_chinese_herbal_medicine.jpg');
+    background-position: 50% 50%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    opacity: 0.25;
+  }
+  .services_mobile_picture_block_cupping {
+    position: absolute;
+    width: 100%;
+    height: 150px;
+    margin-top: 0px;
+    padding-right: 0px;
+    padding-bottom: 0px;
+    background-image: url('../images/cupping_treatment.jpg');
+    background-position: 50% 50%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    opacity: 0.25;
+  }
+  .services_mobile_picture_block_ear_seeds {
+    position: absolute;
+    width: 100%;
+    height: 150px;
+    margin-top: 0px;
+    padding-right: 0px;
+    padding-bottom: 0px;
+    background-image: url('../images/ear_acupuncture.jpg');
+    background-position: 50% 50%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    opacity: 0.25;
+  }
+  .services_mobile_picture_block_moxibustion {
+    position: absolute;
+    width: 100%;
+    height: 150px;
+    margin-top: 0px;
+    padding-right: 0px;
+    padding-bottom: 0px;
+    background-image: url('../images/moxibustion_treatment.jpg');
+    background-position: 50% 50%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    opacity: 0.25;
+  }
+  .services_mobile_picture_block_infrared_treatment {
+    position: absolute;
+    width: 100%;
+    height: 150px;
+    margin-top: 0px;
+    padding-right: 0px;
+    padding-bottom: 0px;
+    background-image: url('../images/heat_lamp_therapy.jpg');
+    background-position: 50% 50%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    opacity: 0.25;
   }
 }
 
